[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
bytes = "1.6.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
